tests/NormalTests/paczka1/fuzzy1/32909839.err
Error in line 1: Ie5qywiLTr S791 16,0
Error in line 5: 86gW3 S838 123,04
Error in line 2: Ie5qywiLTr A793 65,9
Error in line 7: gw0OJOKrQ A989 60,3
Error in line 14: gw0OJOKrQ S791 92,6
Error in line 25: iF5yOhV S898 98,9
